# Hacktoberfest-2024

./: .gitmodules  .index.html.swp  1_Dictionary_BST.cpp  2_Prefix_tree.cpp  3_Mirror_BST.cpp  4_Thread_BST.cpp  5_BFS_and_DFS.cpp  ASCII_Converter.c  About me.md  About.md  After this .md  Armstrong number in java  Array.java  BFS using vectors & queue as per the algorithm of CLRS.cpp  Bacon.py  Binary Search in c++.cpp  BinarySearch  BinarySearchInCpp.cpp  Bubble.java  BubbleSort.java  C Project on Library Management  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Calc.java  CircularLinkedList.c  Code to add a icon  CoinChange.java  CountNumberOfHops.java  CountToZero.java  Count_set_bits.cpp  Create add javascript flexpanels  DFS.py  DS&Algo Programs in binary_insertion_sort.py  Dice_rolling_simulator.py  Digital Clock.java  Dijikstra.py  Dijkstra_algo.cpp  Dijsktra's Algorithm  Discord Bot - Message Restoration  (+212 more)
.github/: Merge Sort.cpp
30DaysCode/: day10_Binary_Numbers.py  day11_2d_arrays.py  day12_inheritance.py  day1_data_types.py  day2_operator.py  day3_Intro_Cond_Statments.py  day4_class_vs_instance.py  day5_loops.py  day6_lets_review.py  day7_array.py  day8_dictionaries_and_maps.py.py  day8_dictionaries_maps.py  day9_recursion3.py
ANN/: Churn_Modelling.csv  Multi Layer ANN.ipynb  ann.py  percepton from scratch.ipynb
Algorithms-in-C/: BST__.C  BankersAlogorithm  Binary Search.c  BinarySearch.c  Binary_Search.c  Binary_Search.cpp  (+58 more)
Mini-Projects/Rust/fetch_openweather/: .env  Cargo.toml  readme.md
Mini-Projects/Rust/fetch_openweather/src/: main.rs
(+1269 files in other folders)
